# spqrel_tools

./: .gitignore  INSTALL.md  Makefile  README.md  requirements.txt  setup-dev.bash  setup-local.bash  setup.bash  spqrel-local-config.yaml  spqrel-pepper-config.json  spqrel-pepper-config.yaml
actions/: EEGPSR_examples_cat3  EEGPSR_examples_cat4  EEGPSR_examples_cat5  GPSR_examples_commands  README.txt  action_cmd.py  aimlsay.py  alltasksconfirmed.py  analyseperson.py  animation.py  approach.py  arm.py  asr.py  asrenable.py  assign.py  bow.py  commandunderstood.py  continuebtn.py  darknetClient.py  describetask.py  dialogue.py  dialoguestart.py  dialoguestop.py  dooropen.py  enter.py  execplan.py  execplanBAK.py  extracttasks.py  fake.py  findperson.py  followuntil.py  fullpeopleperception.py  generatetaskdescription.py  googleasr.py  goto.py  gotopos.py  greet.py  groupdescription.py  headpitch.py  headpose.py  (+61 more)
behaviors/: start_behaviour.py  start_proxies.py
config/: GPSR_tasks_definition.yaml  Locations.xml  Names.xml  Objects.xml  Questions.csv  Questions.xml  SPR_tasks_definition.yaml
detect_waving/: detect_waving.py
face_detection/: face_detection.py  log_face_people_detection.py
html/: index.html
modim/: qaws.js
modim_actions/: index.html  qaws.js
msface_naoqi/: README.md  face.py  face_api_naoqi.py  face_list.py  init_naoqi_bridge.py  person.py  person_group.py  util.py
naoqibag/: README.md  all.key  bodyjoints.key  inertial.key  laser.key  leds.key  (+8 more)
pepper_tools/setposture/: CMakeLists.txt  Readme.md  qiproject.xml  setposture.cpp  setposture.py
(+241 files in other folders)
